--- a/portfolioapp/templates/about.html
+++ b/portfolioapp/templates/about.html
@@ -52,7 +52,7 @@
 </ul>
 
 {% block content %}
-      <article>
+      <main>
         <div class="container">
           <div class="row">
             <div class="col s12 m12">
@@ -135,19 +135,19 @@
             </div> 
           </div>
         </div>
-      </article>
+      </main>
       {% endblock  %}
-      <footer class="card-panel transparent">
+      <footer>
         <div class="container">
           <div class="row">
             <div class="col m6">
-              <p>Copyright @DianaGranat</p>
+              <p>Links:</p>
             </div>
-            <div id="socialbuttons" class="col m4 offset-s7">
-              <a href="https://github.com/diana2granat" class="fab fa-github fa-2x"></a>
-              <a href="https://www.linkedin.com/in/diana-granat-7181581a0/"class="fab fa-linkedin-in fa-2x"></a>
-              <a href="https://www.facebook.com/diana.kuprianowicz/" class="fab fa-instagram fa-2x"></a>
-              <a href="https://www.facebook.com/diana.kuprianowicz/" class="fab fa-facebook-f fa-2x"></a>
+            <div id="socialbuttons">
+              <a href="https://github.com/diana2granat" target="_blank" class="fab fa-github fa-2x"></a>
+              <a href="https://www.linkedin.com/in/diana-granat-7181581a0/" target="_blank" class="fab fa-linkedin-in fa-2x"></a>
+              <a href="https://www.instagram.com/_ha_diana/?utm_source=qr&igsh=bGlrOGdpbmJqNXR0" target="_blank" class="fab fa-instagram fa-2x"></a>
+              <a href="https://www.facebook.com/diana.kuprianowicz/" target="_blank" class="fab fa-facebook-f fa-2x"></a>
             </div>
           </div>
         </div>
