--- a/portfolioapp/templates/about.html
+++ b/portfolioapp/templates/about.html
@@ -137,7 +137,7 @@
         </div>
       </main>
       {% endblock  %}
-      <footer>
+      <footer class="footer">
         <div class="container">
           <div class="row">
             <div class="col m6">
