another project added to the page

--- a/portfolioapp/templates/projects.html
+++ b/portfolioapp/templates/projects.html
@@ -25,7 +25,24 @@
                         </p>
                         </div>
                     </div>
-                </div>             
+                </div>
+                <div class="col s12 m12 l6">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="{% static 'bursztynowe.png' %}">
+                        </div>
+                        <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Apartments renting<i class="material-icons right">more_vert</i></span>
+                        <p id="title">Digital Marketing Manager</p>                        
+                        </div>
+                        <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Apartment Rental Company<i class="material-icons right">close</i></span>
+                        <p>As the custodian of our company's online presence in the dynamic realm of apartment rentals, I oversee and curate our profiles on major platforms such as Booking.com, Facebook, Instagram, and Google. Through strategic management, our profiles boast an impressive score and have achieved prominent visibility, solidifying our standing as a leading player in the industry.
+                            <a href="https://g.co/kgs/QSRJwJo" target="_blank"> profile: Bursztynowe Wczasy Sasino</a> 
+                        </p>
+                        </div>
+                    </div>
+                </div>                  
                 <div class="col s12 m12 l6">
                     <div class="card">
                         <div class="card-image waves-effect waves-block waves-light">
