--- a/portfolioapp/templates/projects.html
+++ b/portfolioapp/templates/projects.html
@@ -88,6 +88,21 @@
                             </div>
                     </div>
                 </div>
+                <div class="col s12 m12 l6">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="{% static 'smartshape.png' %}">
+                            </div>
+                            <div class="card-content">
+                                <span class="card-title activator grey-text text-darken-4">Online Shop<i class="material-icons right">more_vert</i></span>
+                                <p id="title">Owner & Manager & Creative Director</p>
+                            </div>
+                            <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Online clothing store<i class="material-icons right">close</i></span>
+                            <p>I was the driving force behind an online clothing store, wearing many hats as the owner, manager, and marketing specialist. I worked tirelessly to streamline our operations, making it easier for customers to shop online and receive their products promptly. Through strategic efforts, I successfully boosted our income, making our business thrive in the competitive world of online retail. Along the way, I hired and managed a small team, ensuring everyone is aligned with our goals and delivering their best work. It was a journey of growth and success, and I'm proud of the strides we've made together. <a href="https://www.youtube.com/watch?v=FvFSrhuBW5I" target="_blank">SmarShape Summury 2018/19</a> .</p>
+                            </div>
+                    </div>
+                </div>
                              
               
           </div> 
