--- a/portfolioapp/templates/about.html
+++ b/portfolioapp/templates/about.html
@@ -23,6 +23,15 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>{% block title %} About {% endblock %}</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9GYPGGW54J"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-9GYPGGW54J');
+    </script>
 </head>
 <body>
     <nav class="transparent z-depth-0">
