--- a/portfolioapp/templates/contact.html
+++ b/portfolioapp/templates/contact.html
@@ -5,14 +5,30 @@
 <article>
     <div class="container">
         <div class="row">
-            <div class="col s12 m12">
-            <h1 id="positions" class="center-align blue-text text-darken-2">Contact Information</h1>
-            <h5 id="positions">Diana Granat</h5>
-            <h5 id="positions">Check my LinkedIn profile for more details:<br>
-            <a href="https://www.linkedin.com/in/diana-granat-7181581a0/" target="_blank" class="fab fa-linkedin-in fa-2x"></a>
-            </h5>
-            </div> 
+            <div class="col-md-6 offset-md-3">
+                <h1 id="positions" class="center-align blue-text text-darken-2">Contact Me</h1>
+                <h5 class="center-align">Don't hesitate to send me a message!</h5>
+                <form method="post">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="recipient">Recipient Email</label>
+                        <input type="email" class="form-control" id="recipient" name="recipient" placeholder="Enter email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="subject">Subject</label>
+                        <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea class="form-control" id="message" name="message" rows="5" placeholder="Enter your message" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Send</button>
+                </form>
+                <h5 class="center-align">You can also check my LinkedIn profile for more details:<br>
+                    <a href="https://www.linkedin.com/in/diana-granat-7181581a0/" target="_blank" class="fab fa-linkedin-in fa-2x"></a>
+                </h5>
             </div>
-    </div>
+        </div>
+    </div>    
 </article>
 {% endblock  %}
