--- a/portfolioapp/templates/contact.html
+++ b/portfolioapp/templates/contact.html
@@ -7,8 +7,7 @@
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <h1 id="positions" class="center-align blue-text text-darken-2">Contact Me</h1>
-                <h5 class="center-align">Don't hesitate to send me a message!</h5>
-                <form method="post">
+                {% comment %} <form method="post">
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="recipient">Recipient Email</label>
@@ -23,8 +22,8 @@
                         <textarea class="form-control" id="message" name="message" rows="5" placeholder="Enter your message" required></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Send</button>
-                </form>
-                <h5 class="center-align">You can also check my LinkedIn profile for more details:<br>
+                </form> {% endcomment %}
+                <h5 class="center-align">Don't hesitate to send me a message on LinkedIn!<br>
                     <a href="https://www.linkedin.com/in/diana-granat-7181581a0/" target="_blank" class="fab fa-linkedin-in fa-2x"></a>
                 </h5>
             </div>
