changes in the about and contact

--- a/portfolioapp/templates/about.html
+++ b/portfolioapp/templates/about.html
@@ -67,8 +67,13 @@
           <div class="row">
             <div class="col s12 m12">
               <h1 id="dianagranat" class="center-align black-text text-darken-2">Diana Granat</h1>
-              <p id="positions2">Transitioning to Data Engineering, I leverage over four years of IT project management experience, specializing in Agile methodologies. My background in electrical engineering and business analysis equips me to understand and communicate technical concepts effectively.
-              I have a successful track record in developing features that enhance user engagement and drive business growth. 
+              <p id="positions2">Technical Project Manager with 10 years of overall experience, out of which 5 years in Agile development. 
+              <li id="positions2">Proactive and results-driven, known for driving project efficiency and fostering Agile methodologies.</li> 
+              <li id="positions2">Skilled in managing project implementations, risk assessment, and stakeholder collaboration.</li>
+              <li id="positions2">Proficient in organizing engineering meetings, defining project scope, and ensuring deliverables meet quality standards.</li> 
+              <li id="positions2">Holds Bachelor's and Master's degrees in Electric Engineering.</li> 
+              <li id="positions2">Fluent in Polish and English, with intermediate proficiency in Hebrew.</li>
+              <li id="positions2">Currently honing coding skills, aiming to integrate hands-on coding experience with project management proficiency.</li>
               </p>
               <div class="container">
                 <div class="timeline">
@@ -82,8 +87,8 @@
                           <big>Software Developer</big>
                         </span>
                       </div>
-                      <div class="card-content pink lighten-5 grey-text">
-                        <p>Full-Stack Django Software Development</p>
+                      <div class="card-content white lighten-5 grey-text">
+                        <p>Course: Full-Stack Python&Javascript Software Development</p>
                       </div>
                     </div>
                     <div class="timeline-badge red lighten-3 white-text"></div>
@@ -99,7 +104,7 @@
                           <big>Project Manager</big>
                         </span>
                       </div>
-                      <div class="card-content pink lighten-5 grey-text">
+                      <div class="card-content white lighten-5 grey-text">
                         <p>3D Scanning Software | Parking Solutions Systems.</p>
                       </div>
                     </div>
@@ -116,7 +121,7 @@
                           <big>Business Analyst</big>
                         </span>
                       </div>
-                      <div class="card-content pink lighten-5 grey-text">
+                      <div class="card-content white lighten-5 grey-text">
                         <p>Parking Solutions Systems - Mobile and Web development.</p>
                       </div>
                     </div>
@@ -132,7 +137,7 @@
                           <big>Electrical Engineer</big>
                         </span>
                       </div>
-                      <div class="card-content pink lighten-5 grey-text">
+                      <div class="card-content white lighten-5 grey-text">
                         <p>Building Automation Development | Water Pump Systems Development</p>
                       </div>
                     </div>
