--- a/portfolioapp/templates/contact.html
+++ b/portfolioapp/templates/contact.html
@@ -23,7 +23,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Send</button>
                 </form> {% endcomment %}
-                <h5 class="center-align">Don't hesitate to send me a message on LinkedIn!<br>
+                <h5 class="center-align">I'm actively seeking new job opportunities to make a meaningful impact in software projects. Looking forward to connecting and discussing potential roles.<br>
                     <a href="https://www.linkedin.com/in/diana-granat-7181581a0/" target="_blank" class="fab fa-linkedin-in fa-2x"></a>
                 </h5>
             </div>
