--- a/static/style.css
+++ b/static/style.css
@@ -26,6 +26,11 @@ body{
   text-align: left;
   font-weight: 400;
 }
+#positions3 {
+  font-family: 'Assistant', sans-serif;
+  font-weight: 400;
+  text-align: center;
+}
 #footer {
   font-family: 'Assistant', sans-serif;
   text-align: left;
@@ -116,7 +121,6 @@ body{
 		background: linear-gradient(to bottom, rgba(125,185,232,0) 0%,rgba(0,0,0,0.4) 30%,rgba(0,0,0,0.8) 100%);
 	}
 }
-
 .fab {
   padding: 10px;
   font-size: 30px;
